<resources>
    <string name="app_name">What\'s To Eat?</string>
    <string name="what_s_to_eat">What\'s To Eat?</string>
    <string name="price">Price</string>
    <string name="preference_5_distance">Preference 5: Distance</string>
    <string name="preference_4_serving_method">Preference 4: Serving Method</string>
    <string name="preference_3_atmosphere">Preference 3: Atmosphere</string>
    <string name="preference_2_food">Preference 2: Food</string>
    <string name="preference_1_price">Preference 1: Price</string>
    <string name="restaurant_name">Restaurant Name:</string>
    <string name="location">Location:</string>
    <string name="price1">Price:</string>
    <string name="textview">TextView</string>
    <string name="like">Like</string>
    <string name="food_type">Food Type:</string>
    <string name="atmosphere">Atmosphere:</string>
    <string name="serving_method">Serving Method:</string>
    <string name="favourite">Favorite:</string>
</resources>
