<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/restaurant_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/restaurant_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resAddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_Name" />

    <TextView
        android:id="@+id/resPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/price1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resTypeLabel" />

    <TextView
        android:id="@+id/resAtmosphereLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/atmosphere"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resPriceLabel" />

    <TextView
        android:id="@+id/resTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/food_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resAddressLabel" />

    <TextView
        android:id="@+id/resServingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/serving_method"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resAtmosphereLabel" />

    <TextView
        android:id="@+id/resFavouriteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/favourite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resServingLabel" />

    <Button
        android:id="@+id/like"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/like"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/resName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/textview"
        app:layout_constraintStart_toEndOf="@+id/restaurant_Name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/textview"
        app:layout_constraintStart_toEndOf="@+id/resAddressLabel"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_Name" />

    <TextView
        android:id="@+id/resType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/textview"
        app:layout_constraintStart_toEndOf="@+id/resTypeLabel"
        app:layout_constraintTop_toBottomOf="@+id/resAddress" />

    <TextView
        android:id="@+id/resPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/textview"
        app:layout_constraintStart_toEndOf="@+id/resPriceLabel"
        app:layout_constraintTop_toBottomOf="@+id/resType" />

    <TextView
        android:id="@+id/resAtmosphere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/textview"
        app:layout_constraintStart_toEndOf="@+id/resAtmosphereLabel"
        app:layout_constraintTop_toBottomOf="@+id/resPrice" />

    <TextView
        android:id="@+id/resServing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/textview"
        app:layout_constraintStart_toEndOf="@+id/resServingLabel"
        app:layout_constraintTop_toBottomOf="@+id/resAtmosphere" />

    <TextView
        android:id="@+id/resFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/textview"
        app:layout_constraintStart_toEndOf="@+id/resFavouriteLabel"
        app:layout_constraintTop_toBottomOf="@+id/resServing" />
</android.support.constraint.ConstraintLayout>
